# rust-playground

./: Cargo.toml
assets/: countries.json
src/: formatter.rs  list.rs  main.rs  serializer.rs
