[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
authors = [
    "Ivan Kuzyshyn <kuzyshyn.ivan@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
